<resources>
    <string name="app_name">MVVM Sample App Intern</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="response_result">Response result :</string>
    <string name="register_result">Register result :</string>
    <string name="response_error">Response error :</string>
    <string name="register_error">Register error :</string>
    <string name="register">REGISTER</string>
    <string name="sign_in_now">Have an account? signIn now</string>
    <string name="sign_up_now">Don\'t have an account? signUp now</string>
    <string name="see_list_user">See User List</string>
    <string name="no_exist_user">There is user exist :</string>
    <string name="login_start">Login Started</string>
    <string name="sample_pass">cityslicka</string>
    <string name="sample_email">eve.holt@reqres.in</string>
    <string name="am_user">I am user :</string>
    <string name="logged_by_db">Logged by save user db local</string>
    <string name="see_bar_chart">See Bar Chart</string>
    <string name="see_broadcast">See Main Broadcast</string>
    <string name="str_cells">Cells</string>
    <string name="str_case">Case</string>
    <string name="str_dead">Dead</string>
    <string name="str_recover">Recovered</string>
    <string name="sample_receiver">Sample App SMS Receiver</string>
    <string name="check_sms_permission">Check SMS Permission</string>
    <string name="incoming_message">Pesan masuk</string>
    <string name="str_from">From : %1$s</string>
    <string name="sms_permission_granted">Sms receiver permission granted</string>
    <string name="sms_permission_denied">Sms receiver permission denied</string>
    <string name="see_shimmer_chart">See Shimmer Chart</string>
    <string name="start_work_request">START ONE TIME WORK REQUEST</string>
    <string name="see_work_manager">See Work Manager</string>
    <string name="number_of_visitors">Number of visitors :</string>
    <string name="_0">0</string>
    <string name="see_broadcast_with_fcm">See Broadcast Receiver With FCM</string>
</resources>
